# rf-component-finder

./: .env  .gitignore  config.example.yaml  genai_fabric-0.1.0-py3-none-any.whl  genai_fabric-0.1.2-py3-none-any.whl  pyproject.toml
.claude/agents/: developer.md  openspec-implementer.md  openspec-lead.md
evals/: eval_datasheet.py  eval_gold.py
mockdata/: README.md  path_a.json  path_b.json  path_c.json
openspec/: future-requirements.md  open-questions.md
rf_finder/: __main__.py  cache.py  cli.py  config.py  http.py  manager.py  models.py  pipeline.py  reporter.py  search.py  verifier.py
rf_finder/adapters/: __init__.py  amcomusa.py  analogdevices.py  base.py  datasheet.py  guerrillarf.py  macom.py  marki.py  microchip.py  minicircuits.py  qorvo.py  rwmmic.py  threerwave.py  ums.py  vectrawave.py
rf_finder/agent/: __init__.py  resume.py  run_log.py  skill_runner.py
rf_finder/datasheet/: __init__.py  code_extractors.py  extractor.py  mapping.py  pdf.py
rf_finder/form/: __init__.py  input.py  schema.py
rf_finder/ontology/: __init__.py  components.py  parameters.py  supply.py  units.py
scripts/: run_demo_search.py  run_rf_search.py
tests/: test_adapters_base.py  test_amcomusa.py  test_cache.py  test_config.py  test_datasheet.py  test_datasheet_extractor.py  test_datasheet_extractors.py  test_datasheet_mapping.py  test_datasheet_pdf.py  test_form.py  test_gui.py  test_http.py  test_main.py  test_manager.py  test_models.py  test_ontology.py  test_pipeline.py  test_pipeline_e2e.py  test_resume.py  test_run_log.py  test_search.py  test_skill_runner.py  test_supply.py  test_units.py  test_vdd_contains.py  test_vdd_overlap.py  test_verifier.py
(+159 files in other folders)
