[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rf-finder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "selectolax",
    "playwright",
    "pdfplumber",
    "pyyaml",
    "questionary",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
rf-finder = "rf_finder.__main__:main"
